--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,6 +33,40 @@
 }
 
 
+
+
+
+@font-face {
+  font-family: Inter;
+  font-weight: 300;
+  src: url("../fonts/inter-cdnfonts/Inter-Light-BETA.otf");
+}
+
+@font-face {
+  font-family: Inter;
+  font-weight: 400;
+  src: url("../fonts/inter-cdnfonts/Inter-Regular.otf");
+}
+
+@font-face {
+  font-family: Inter;
+  font-weight: 500;
+  src: url("../fonts/inter-cdnfonts/Inter-Medium.otf");
+}
+
+@font-face {
+  font-family: Inter;
+  font-weight: 700;
+  src: url("../fonts/inter-cdnfonts/Inter-SemiBold.otf");
+}
+
+@font-face {
+  font-family: Inter;
+  font-weight: 900;
+  src: url("../fonts/inter-cdnfonts/Inter-Bold.otf");
+}
+
+
 /* :root {
   --max-width: 1100px;
   --border-radius: 12px;
